# ParkRangerTools

./: .gitignore  Procfile  README.md  package.json  pyproject.toml  render.yaml  requirements.txt
backend/: __init__.py  package.json
backend/app/: __init__.py  app.py  auth.py  database.py  forms.py  inspections.py  mock_data.py  models.py
backend/src/middleware/: captcha.ts  rateLimit.ts
backend/src/routes/: reports.ts
backend/src/utils/: thumbnail.ts
frontend/: __init__.py  app.py  package.json
frontend/src/: sw.ts
frontend/src/pages/: ReportForm.tsx
frontend/src/utils/: offlineQueue.ts
frontend/static/: app.js  styles.css
tests/: conftest.py  test_app.py  test_frontend.py
