[project]
name = "park-ranger-tools"
version = "0.1.0"
description = "Truck inspection app backend"
requires-python = ">=3.9"
authors = [
  { name = "Park Ranger Tools" }
]
dependencies = [
  "openpyxl>=3.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
